--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <body>
         <div id="app">
             <div id="sidebar">
+                <a href="https://github.com/EthanCPP/snakle" target="_blank" class="github-link">
+                    <img src="github.png" class="github-logo" alt="Github" />
+                </a>
+
                 <h2 id="title">SNAKLE</h2>
 
                 <div class="guess-list">
