--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <div id="main">
                 <div class="overlay visible">
                     <div class="overlay-inner overlay-start visible">
+                        <h2>Use &lt;WASD&gt; to move</h2>
                         <h2>Press &lt;Backspace&gt; to remove a letter</h2>
                         <h2>Press &lt;Enter&gt; to play the word</h2>
                         <h2>Ready? Press &lt;Enter&gt; to start</h2>
